--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
-  "name": "slashdinner-vue",
+  "name": "substrate-vue",
   "version": "1.0.0",
-  "description": "Front End for Wifey's Meals App",
+  "description": "Front End",
   "author": "Ryan Carter",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
-    "lint": "eslint --ext .js,.vue src"
+    "lint": "eslint --ext .js,.vue src",
+    "prod": "http-server ./dist -p 8081"
   },
   "dependencies": {
     "axios": "^0.16.2",
     "bulma": "^0.5.3",
+    "google-code-prettify": "^1.0.5",
+    "moment": "^2.19.2",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
-    "vue": "^2.4.2",
-    "vue-router": "^2.7.0"
+    "trix": "^0.11.1",
+    "vee-validate": "^2.0.0-rc.18",
+    "vue": "2.4.2",
+    "vue-highlightjs": "^1.3.3",
+    "vue-localstorage": "^0.5.0",
+    "vue-router": "^2.7.0",
+    "vue-wysiwyg": "^1.2.7"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -56,7 +64,7 @@
     "url-loader": "^0.5.8",
     "vue-loader": "^13.0.4",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.4.2",
+    "vue-template-compiler": "2.4.2",
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
